multiple cleanups of issues from PMD, Findbugs and Lint4j fixed POM of country code plugin force 1.5 compiler in eclipse settings for plugins project